edits and some questions

--- a/references.bib
+++ b/references.bib
@@ -13,9 +13,9 @@ eprint = {http://www.tandfonline.com/doi/pdf/10.1080/09332480.2013.772392}
 }
 
 @article{hadley:2014,
-author = {Wickham},
+author = {Hadley Wickham},
 title = {Tidy Data},
-journal = {Under review},
+journal = {Under review by the Journal of Statistical Software},
 year = {2014},
 
 URL = {http://vita.had.co.nz/papers/tidy-data.pdf},
@@ -38,4 +38,31 @@ eprint = {http://vita.had.co.nz/papers/tidy-data.pdf}
     year = {2009},
     isbn = {978-0-387-98140-6},
     url = {http://had.co.nz/ggplot2/book},
+  }
+
+@Manual{maps,
+    title = {maps: Draw Geographical Maps},
+    author = {Original S code by Richard A. Becker and Allan R. Wilks. R version by Ray Brownrigg. Enhancements by Thomas P Minka <tpminka@media.mit.edu>},
+    year = {2013},
+    note = {R package version 2.3-6},
+    url = {http://CRAN.R-project.org/package=maps},
+  }
+
+@Manual{maptools,
+    title = {maptools: Tools for reading and handling spatial objects},
+    author = {Roger Bivand and Nicholas Lewin-Koh},
+    year = {2013},
+    note = {R package version 0.8-27},
+    url = {http://CRAN.R-project.org/package=maptools},
+  }
+
+@Article{plyr,
+    title = {The Split-Apply-Combine Strategy for Data Analysis},
+    author = {Hadley Wickham},
+    journal = {Journal of Statistical Software},
+    year = {2011},
+    volume = {40},
+    number = {1},
+    pages = {1--29},
+    url = {http://www.jstatsoft.org/v40/i01/},
   }
