--- a/CB_writeup.Rnw
+++ b/CB_writeup.Rnw
@@ -5,6 +5,7 @@
 \usepackage[backend=bibtex, natbib=true]{biblatex}
 \addbibresource{references.bib}
 
+\newcommand{\hh}[1]{{\color{magenta} #1}} 
 
 \usepackage[margin=1in]{geometry}
 \setlength{\parindent}{0in}
@@ -14,40 +15,43 @@
 \begin{document}
 \maketitle
 
-\section{Abstract}
+\begin{abstract}
 Placeholder.
 
+\hh{your solution to cut down on the length of the commands looks great!}
+\end{abstract}
+
 \section{Introduction}
-The United States Census Bureau has been conducting a decennial census since 1790.  Originally this census was a simply to count the population across the country.  More recently the decennial census includes a short-form asking for name, sex, age, and a few other demographic variables.  About one in six households also received a long-form that contained additional socioeconomic questions.  After the 2000 decennial census many of the long-form questions were collected as part of a new survey: the American Community Survey (ACS).  \\
+The United States Census Bureau has been conducting a decennial census since 1790.  Originally this census was  simply to count the population across the country.  More recently the decennial census includes a short-form asking for name, sex, age, and a few other demographic variables.  About one in six households also received a long-form of the census consisting of additional socioeconomic questions.  After the 2000 decennial census many of the long-form questions were collected as part of a new survey: the American Community Survey (ACS).  \\
 \\
-The ACS is an ongoing yearly survey that collects additional demographic variables including but not limited to age, sex, race, income and education.  Unlike the decennial census, the American Community Survey is distributed based on a random selection of addresses every year.  Although the ACS is only sent to a sample of all US households, this data is meant to provide more up to date information than the Census Bureau's decennial census.  Both the decennial census and the American Community Survey are required to be completed by law; however it should be noted that the Census Bureau has not opted to prosecute anyone for failure to complete the decennial census or the ACS.  Despite the lack of enforcement, the ACS still reports a response rate of 97$\%$.\\ %http://www.politifact.com/texas/statements/2014/jan/09/us-census-bureau/americans-must-answer-us-census-bureau-survey-law-/
+The ACS is an ongoing yearly survey that collects additional demographic variables including but not limited to age, sex, race, income and education.  Unlike the decennial census, the American Community Survey is distributed based on a random selection of addresses every year.  Although the ACS is only sent to a sample of all US households, this data is meant to provide more up to date information than the Census Bureau's decennial census.  Completion of both the decennial census and the American Community Survey are required by law (Title 18 U.S.C Section 3571 and Section 3559); however, it should be noted that the Census Bureau has not opted to prosecute anyone for failure to complete the decennial census or the ACS.  Despite the lack of enforcement, the ACS still reports a response rate of 97\%.\\ %http://www.politifact.com/texas/statements/2014/jan/09/us-census-bureau/americans-must-answer-us-census-bureau-survey-law-/
 \\
-Both the decennial survey and the ACS data are used in part by federal, state and local agencies to allocate state funding and for policy decisions.  The Census Bureau has also released some of this data for public use.  Many of the data sets are available directly in a compressed format from the Census Bureau's FTP site: \url{http://ftp2.census.gov/}.  Since 2012, the Census Bureau has also included an online developer's API in order to improve accessibility of the ACS and decennial census datasets.  The Census Bureau's online API can be accessed online: \url{http://api.census.gov}.\\
+Both the decennial survey and the ACS data are used in part by federal, state and local agencies as basis for policy decisions and to allocate state funding.  The Census Bureau has also released some of this data for public use.  Many of the data sets are available directly in a compressed format from the Census Bureau's FTP site: \url{http://ftp2.census.gov/}.  Since 2012, the Census Bureau has also included an online developer's API in order to improve accessibility of the ACS and decennial census datasets.  The Census Bureau's online API can be accessed online: \url{http://api.census.gov}.\\
 \\
 We will discuss how the ACS data is structured when we request data and how to access data from the Census Bureau's online developer's API.  We will also discuss what kind of variables are available and some limitations with the API.  We will base this discussion on a paper by \citet{stangl:2013} as a starting point on some of the limitations of the API.  This article explores some multivariate frequency distributions using data from the ACS dataset; however, there are some gaps in what we can access as well as inconsistencies in the database.
 
 \section{Requesting Data}
-To access data from the Census Bureau's online API we need to construct a proper HTTP GET request.  A valid GET request is formed through a constructed web URL and include a specific dataset, year, variable and geographic region of interest.  The basic structure of an HTTP GET request for the decennial census and for the ACS is as follows:
+To access data through the Census Bureau's online API we need to construct an  HTTP GET request.  A valid GET request is formed through a constructed web URL and includes a specific dataset, year, variable and geographic region of interest.  The basic structure of an HTTP GET request for the decennial census and for the ACS is as follows:
 \begin{verbatim}
 http://api.census.gov/data/[YEAR]/[DATASET]?key=[KEY]&get=[VARIABLES]&for=[GEOGRAPHY]
 \end{verbatim}
-The bracketed expressions in the above URL represent various parameters that need to be specified depending on dataset, time frame, geographic region of interest and demographic variables.  Each of the bracketed expressions is detailed in the following sections.  
+The bracketed expressions in the above URL represent  parameters that need to be specified depending on dataset, time frame, geographic region of interest and demographic variables.  Each of the bracketed expressions is detailed in the following sections.  
 
 \subsection{Key}
 $[$KEY$]$ is an id code required to perform a valid GET request.  A developer's key uniquely identifies anyone who requests data from the API.  Requesting a key can be done by registering at \url{http://www.census.gov/developers/tos/key_request.html}.
 
 \subsection{Year and Dataset}
-$[$YEAR$]$ and $[$DATASET$]$ specify the dataset and year of the data requested.  The available datasets include the decennial census and the ACS.  The ACS datasets are available in 1-year, 3-year and 5-year timeframes.  The $[$YEAR$]$ variable for the ACS datasets indicates the final year in the timeframe.  For example, the 2012 5-year ACS dataset is the ACS dataset that spans 2008-2012 and the 2012 3-year ACS dataset is the ACS dataset that spans 2010-2012.  For the decennial census the $[$YEAR$]$ indicates the year the census data was collected.  The $[$DATASET$]$ parameter is an abbreviation for the dataset assigned by the Census Bureau.  For example, ACS 5-year dataset is $acs5$ and the ACS 1-year dataset is $acs1$.  See table \ref{tab:datasettable} for a list of timeframes, datasets and the associated abbreviations assigned by the census bureau.\\
+$[$YEAR$]$ and $[$DATASET$]$ specify the dataset and year of the data.  The available datasets include the decennial census and the ACS.   ACS datasets are provided in form of 1-year, 3-year and 5-year \hh{aggregates}.  The $[$YEAR$]$ variable for the ACS datasets indicates the final year in the aggregate.  For example, the 2012 5-year ACS dataset is the ACS dataset that spans 2008-2012 and the 2012 3-year ACS dataset is the ACS dataset that spans 2010-2012.  For the decennial census the $[$YEAR$]$ indicates the year the census data was collected.  The $[$DATASET$]$ parameter is an abbreviation for the dataset assigned by the Census Bureau.  For example, the ACS 5-year dataset is $acs5$ and the ACS 1-year dataset is $acs1$.  Table \ref{tab:datasettable} gives an overview of timeframes, datasets and the associated abbreviations assigned by the census bureau.\\
 <<datasettable, echo=FALSE, warning=FALSE, message=FALSE, results='asis'>>=
 library(xtable)
 sets = data.frame(Description = c("Decennial Census", "ACS 5-year", "ACS 3-year", "ACS 1-year"),
                   YEAR = c("1990, 2000, 2010", "2010, 2011, 2012", "2012", "2011, 2012"),
                   DATASET = c("sf1", "acs5", "acs3", "acs1"))
 sets = sets[,c(3,2,1)]
-tabl = xtable(sets, label="tab:datasettable", caption="Datasets and Years")
+tabl = xtable(sets, label="tab:datasettable", caption="Datasets and Years provided by the Census Bureau through the online API.")
 print(tabl, include.rownames=FALSE)
 @
-For the 2010 decennial census, table \ref{tab:datasettable} indicates that a valid HTTP GET request is as follows:
+For the 2010 decennial census a valid HTTP GET request \hh{(see table \ref{tab:datasettable}) is formed} as follows:
 \begin{verbatim}
 http://api.census.gov/data/2010/sf1?key=[KEY]&get=[VARIABLES]&for=[GEOGRAPHY]
 \end{verbatim}
@@ -57,7 +61,7 @@ http://api.census.gov/data/2011/acs3?key=[KEY]&get=[VARIABLES]&for=[GEOGRAPHY]
 \end{verbatim}
 
 \subsection{Geography}
-$[$GEOGRAPHY$]$ describes the geographic region of interest.  The geographic area can include the entire United States:
+$[$GEOGRAPHY$]$ describes the geographic region of interest, \hh{and the} $\&for=[GEOGRAPHY]$ tag is used to indicate this region. The geographic area can include the entire United States:
 \begin{verbatim}
 http://api.census.gov/data/[YEAR]/[DATASET]?key=[KEY]&get=[VARIABLES]&for=us:*
 \end{verbatim}
@@ -67,19 +71,20 @@ http://api.census.gov/data/[YEAR]/[DATASET]?key=[KEY]&get=[VARIABLES]&for=state:
 http://api.census.gov/data/[YEAR]/[DATASET]?key=[KEY]&get=[VARIABLES]&for=state:06
 http://api.census.gov/data/[YEAR]/[DATASET]?key=[KEY]&get=[VARIABLES]&for=state:01,06
 \end{verbatim}
-The above HTTP GET requests specify all states, a specific state (California, see figure \ref{fig:state}), or multiple states (Alabama and California) respectively.  Some geographic regions are nested within larger regions and may require a specified containing region.  In our GET request the $\&for=[GEOGRAPHY]$ tag is used to indicate a geographic region of interest and the the $\&in=[GEOGRAPHY]$ tag is used to specify an appropriate containing region for our region of interest.  For example, counties are contained within states and the following is a GET request for a county or counties within a specific state:
+The above HTTP GET requests specify all states, a specific state (California, see figure \ref{fig:state}), and a set of selected states (Alabama and California), respectively.  Some geographic regions are nested within larger regions and \hh{a GET request} may require us to specify the containing region. The  $\&in=[GEOGRAPHY]$ tag is used to \hh{further} specify an appropriate containing region for the region of interest.  For example, counties are contained within states and the following statement is a GET request for a county or counties within a specific state:
 \begin{verbatim}
-http://api.census.gov/data/ [...] &for=county:*&in=state:06
 http://api.census.gov/data/ [...] &for=county:037&in=state:06
+http://api.census.gov/data/ [...] &for=county:*&in=state:06
 \end{verbatim}
-The above HTTP GET requests all counties in California and Los Angeles County in California respectively (see figure \ref{fig:county}, not that we truncated above URL for display purposes).  There are even smaller geographic regions and for some of these geographic entities multiple containing regions must be specified for a valid GET request.  For example, census tracts are contained within both counties and states.  Here is how specify a census tract or multiple census tracts within a county and state:
+The above HTTP GET requests  Los Angeles County in California and all counties in California, respectively (see figure \ref{fig:county}, note that we truncated above URL for display purposes).  There are even smaller geographic regions and for some of these geographic entities multiple containing regions have to be specified for a valid GET request.  For example, census tracts are contained within both counties and states.  Here is how \hh{we can} specify a \hh{valid GET request to access data for a }census tract or multiple census tracts within a county and state:
 \begin{verbatim}
 http://api.census.gov/data/ [...] &for=tract:*&in=state:06+county:037
 http://api.census.gov/data/ [...] &for=tract:101110&in=state:06+county:037
 \end{verbatim}
-The above HTTP GET requests all census tracts within Los Angeles County and census tract 1011.10 within Los Angeles County respectively.\\
+The above HTTP GET requests all census tracts within Los Angeles County and census tract 1011.10 within Los Angeles County, respectively.\\
 \\
-The Census Bureau has a very sophisticated system of hierarchy for geographic entities.  At the top level of the ACS is the entire nation, followed by region, division, state, county, county-subdivision, tract, block group, place, congressional district, zip code area, school district and a few other geographic divisions.  See table \ref{tab:geolist} for a complete table of geographic entities available on the census API for the 2012 ACS.\\
+The Census Bureau has a very sophisticated system of hierarchy for geographic entities.  At the top level of the ACS is the entire nation, followed by region, division, state, county, county-subdivision, tract, block group, place, congressional district, zip code area, school district and a few other geographic divisions.  See table \ref{tab:geolist} for a complete table of geographic entities available on the census API for the 2012 ACS. \hh{XXX I know that I've asked before, and I know that you had a reason - but I forgot: what does the number of the summary level tell us? Could you include that in the description (or leave it out - it's a bit confusing). Could you extend the table by including the valid `for' and any required `in' geographic regions? 
+I'm for example not quite sure how I would ask for a county subdivision - how o you deal with the white space? include a plus symbol?}\\
 
 <<geotable, echo=FALSE, warning=FALSE, message=FALSE, eval=FALSE>>=
 #http://api.census.gov/data/2012/acs5/geo.html
@@ -123,20 +128,20 @@ Summary Level & Description \\
   970 & state-school district (unified) \\ 
    \hline
 \end{tabular}
-\caption{List of valid geographic combinations for 2012 ACS 5-year}
+\caption{List of valid geographic regions for the 2012 ACS 5-year}
 \label{tab:geolist}
 \end{table}
 
 From table \ref{tab:geolist}, there is a specific hierarchy of geographic regions and specific valid combinations of geographic regions.  Different ACS datasets  have different geographic regions available and different requirements for geographic regions.  For example, the 2010 decennial census requires that we specify a state for zip code tabulation areas.  By contrast, the 2012 ACS 5-year dataset has zip code tabulation areas that do not require a containing state for a valid GET request.  The 2010 ACS 5-year dataset simply does not have zip code tabulation areas available at all.  In order to understand which geographic regions are available for datasets and which combination of geographic regions are valid we will discuss the Census Bureaus documentation scheme for each of their datasets in the section \ref{sec:geo}.\\
 \\
-Finding available demographic variables and forming a valid GET request for ($[$VARIABLES$]$) require a more detailed knowledge of how the census datasets are organized and also requires knowledge of how the Census Bureau lists available variables.  We discuss finding demographic variables and their format and structure in section \ref{sec:var}.
+Finding available demographic variables and forming a valid GET request for ($[$VARIABLES$]$) requires a more detailed knowledge of how the census datasets are organized which variables are made available.  We discuss finding demographic variables and their format and structure in section \ref{sec:var}.
 
 \section{Metafiles}
-Each dataset on the Census Bureau API includes documentation for geography and variables in the form of JSON and XML files.  JSON and XML are two different file formats that are machine generated datasets designed to store meta information including file descriptions and structural information.  JSON stands for JavaScript Ojbect Notation and is designed to be a human readable format for sending data.  The JSON data structure is centered around name-value pairs.  XML stands for Extensible Markup Language and is similar in structure to the HTML format used for webpages.  XML is another format for sending and storing data.  It is formatted in a tree-like structure with a hierarchy of categories with associated values.  These JSON and XML files contain the specific requirements for geography and for the demographic variables.
+Each dataset on the Census Bureau API includes documentation for geography and variables in the form of JSON and XML files.  JSON and XML are two different file formats that are machine generated datasets designed to store meta information including file descriptions and structural information.  JSON stands for JavaScript Object Notation and is designed to be a human readable format for sending data.  The JSON data structure is centered around name-value pairs.  XML stands for Extensible Markup Language and is similar in structure to the HTML format used for webpages.  XML is another format for sending and storing data.  It is formatted in a tree-like structure with a hierarchy of categories and associated values.  These JSON and XML files contain the specific requirements for geography and for the demographic variables.
 
 \subsection{Geography}
 \label{sec:geo}
-Each dataset available on the Census Bureau online API include an associated geography file formatted in JSON and a similar file formatted in XML.  These files tell us which geographic regions can be included in a valid GET request and the combination of geographic regions that must be specified.  The JSON formatted file for geographies has the following format:
+Each dataset available on the Census Bureau online API includes an associated geography file formatted in JSON and a similar file formatted in XML.  These files tell us which geographic regions can be included in a valid GET request and the combination of geographic regions that must be specified.  The JSON formatted file for geographies has the following format:
 \begin{verbatim}
 {
   "name": "tract",
@@ -217,8 +222,30 @@ qplot(long, lat, data=subset(map_data('county'), region=="iowa"), group=group, o
 
 For a more detailed look at which geographies need to be specified, refer to the census bureau list of summary levels for each dataset or the XML or JSON geography files.  For the 2012 ACS dataset this is located at \url{http://api.census.gov/data/2012/acs5/geo.html}, the XML file is located at \url{http://api.census.gov/data/2012/acs5/geography.xml} and the JSON file is located at \url{http://api.census.gov/data/2012/acs5/geography.json}.  The above maps are available in shapefile format from the Census Bureau website located at \url{http://www.census.gov/cgi-bin/geo/shapefiles2013/main}.
 
+\hh{The map for Iowa's school districts can - after downloading the corresponding shapefile, e.g.~be created using the following code, which is based on R packages ggplot2 \cite{ggplot2}, maps \cite{maps}, and maptools \cite{maptools}:}
+<<sd, eval=FALSE, tidy=FALSE>>=
+library(maps)
+library(maptools)
+library(ggplot2)
+iowa.sd = readShapeSpatial("tl_2013_19_unsd.shp")
+iowa.sd.geo = fortify(iowa.sd)
+
+theme_map = theme(axis.ticks = element_blank(), axis.text.x = element_blank(), 
+                  axis.title.x = element_blank(), axis.text.y = element_blank(), 
+                  axis.title.y = element_blank(), panel.grid = element_blank(), 
+                  panel.border = element_blank(), legend.position = "none")
+
+# plot the map
+qplot(data=iowa.sd.geo, long, lat, 
+      group=group, order=order, geom="path") + 
+  theme_bw() + coord_map() + 
+  theme_map + ggtitle("Iowa Unified School Districts")
+@
+
 \subsection{Finding Data Sets and Tables Structure}
 \label{sec:var}
+\hh{XXX could you go over this section again and remove all of the duplicates? - we only need HTML or XML descriptions, and we also only need either the JSON output or a table (e.g. table 3)}
+
 The ($[$VARIABLES$]$) parameters depends on dataset.  To track which datasets are available there is a master index of available dataset formatted in both JSON and XML provided by the Census Bureau.  The JSON file is available online at \url{http://api.census.gov/data.json} and the XML file is available online at \url{http://api.census.gov/data.xml}.  This master index includes necessary meta-information about each dataset including description, links to geography and variable information and contact information for maintainer of datasets.  The JSON format is formatted as follows:
 \begin{verbatim}
 {
@@ -276,7 +303,7 @@ The American Community Survey (ACS) is a nationwide survey...
 <pod:reference link="http://www.census.gov/developers/"/>
 </dataset>
 \end{verbatim}
-After selecting a dataset listed in the master index, the user will lookup what variables are available for that dataset.  The JSON and XML master index of datasets contain the location of $variables.json$ and $variables.xml$ respectively which list available variables available for that dataset.  Available variables are organized into tables referred to as $concepts$; a $concept$ is a combination of factors.  For example, ``Health Insurance Coverage Status by Sex by Age" is a concept from the 2012 ACS.  Within each $concept$ are $labels$; a $label$ is a combination of levels for the factors within a concept.\\
+After selecting a dataset listed in the master index, the user will lookup what variables are available for that dataset.  The JSON and XML master index of datasets contain the location of {\tt variables.json} and {\tt variables.xml} respectively which list available variables available for that dataset.  Available variables are organized into tables referred to as \emph{concepts}; a \emph{concept} is a combination of factors.  For example, ``Health Insurance Coverage Status by Sex by Age" is a concept from the 2012 ACS.  Within each concept are \emph{labels}; a \emph{label} is a combination of levels for the factors within a concept.\\
 \\
 Within each concept there are multiple labels that provide information on different levels of each of the factors.  For example, the concept ``Health Insurance Coverage Status by Sex by Age" contains a label for males over 70 with health insurance.  This concept also contains labels for each combination of gender (male, female), age group (under 6, 6 to 17, 18 to 24, 25 to 34, 35 to 44, 45 to 54, 55 to 64, 65 to 74 and 75 and over) and health insurance coverage (with and without health insurance).  Some of the labels may also contain summary information in the form of totals.  For this concept there are labels for total number of males, total number of females and totals for males/females in each age group.\\
 \\
@@ -293,7 +320,7 @@ This describes label 056E of concept B27001.  This is a table of 75 and older fe
   label="Female:!!75 years and over:!!With health insurance coverage" 
   concept="B27001. Health Insurance Coverage Status by Sex by Age"/>
 \end{verbatim}
-In both the XML and JSON formats the different levels of factors in the labels are separated by !!.  To form a valid GET request we take the header from the JSON file (or the $id$ from the XML file) and that will be the parameter we use for ($[$VARIABLES$]$).  The concept-label ID $B27001\_056E$ will request the ``75 and older female with health insurance" label from the ``health insurance coverage status by sex by age" concept.  A valid HTTP GET request for this is \url{http://api.census.gov/data/[YEAR]/[DATASET]?key=[KEY]&get=B27001_056E&for=[GEOGRAPHY]}.
+In both the XML and JSON formats the different levels of factors in the labels are separated by !!.  To form a valid GET request we take the header from the JSON file (or the $id$ from the XML file) and that will be the parameter we use for ($[$VARIABLES$]$).  The concept-label ID {\tt B27001\_056E} will request the ``75 and older female with health insurance" label from the ``health insurance coverage status by sex by age" concept.  A valid HTTP GET request for this is \url{http://api.census.gov/data/[YEAR]/[DATASET]?key=[KEY]&get=B27001_056E&for=[GEOGRAPHY]}.
 
 <<dataexample, echo=FALSE, cache=TRUE, results='asis'>>=
 library(rjson)
@@ -319,7 +346,7 @@ Table \ref{tab:df} is information on health insurance for women 75 and older in 
 \end{verbatim}
 This indicates that there are 668 women over 75 in Alameda county that have health insurance and 144 women over 75 in Alameda county without health insurance.\\
 \\
-The list of variables, $variables.json$ and $variables.xml$ not only contain a list of variables as described above but also include margin of error.  Estimates from the ACS are based on random sampling thus each of the estimates has a standard error.  The Census Bureau uses a 90$\%$ confidence level for their margin of error.  To find the associated margin of error for our variable we replace the last letter of label with an ``M" instead of an ``E".  For example, $B27001\_056E$ and $B27001\_057E$ are the associated standard errors for the previous example.  Standard errors have the exact same formatting as any other variable from the ACS:
+The list of variables, $variables.json$ and $variables.xml$ not only contain a list of variables as described above but also include margin of error.  Estimates from the ACS are based on random sampling thus each of the estimates has a standard error.  The Census Bureau uses a 90$\%$ confidence level for their margin of error.  To find the associated margin of error for our variable we replace the last letter of label with an ``M" instead of an ``E".  For example, {\tt B27001\_056M} and {\tt B27001\_057M} are the associated standard errors for the previous example.  Standard errors have the exact same formatting as any other variable from the ACS: \hh{XXX I think it should be B27001\_057M instead of B27001\_057E}
 \begin{verbatim}
 [["B27001_056M","B27001_057E","NAME","state","county"],
 ["356","302","Alameda County, California","06","001"],
@@ -332,13 +359,13 @@ The list of variables, $variables.json$ and $variables.xml$ not only contain a l
 Using the above table, $668 \pm 356$ is a 90$\%$ confidence interval for the number of women in Alameda County 75 and over with health insurance.
 
 \section{Limitations of the API}
-\citet{stangl:2013} talks about using the ACS as a dataset for classroom exercises because it demonstrates how statistics are used to make important policy decisions.  This article contains a number of classroom exercises that ask the reader to calculate some basic proportions about various demographic data such as health insurance coverage, marriage status and income.  The particular dataset used by \citet{stangl:2013} is a 1000 observation random subset of the 2010 ACS public use microdata sample.  We will attempt to use the Census Bureau online API to examine the same demographic variables.\\
+\hh{The paper by } \citet{stangl:2013} talks about using the ACS as a dataset for classroom exercises \hh{(at the undergraduate level) with an emphasis on } how \hh{data collected from these surveys} are used to make important policy decisions.  The paper contains a number of classroom exercises that ask the reader to calculate  basic proportions about various demographic data such as health insurance coverage, marriage status and income.  The particular dataset used by \citet{stangl:2013} is a 1000 observation random subset of the 2010 ACS public use microdata sample \hh{which constitutes a 0.005\% subsample of the 2010 ACS, or about a 0.0003\% representation of the US population. It would be advantageous by far to get corresponding answers based on the whole of the 2010 ACS}. \hh{XXX I will try to find an educational reference that realistic examples in the classroom are better for the learning outcome.}  We will attempt to use the Census Bureau online API to examine the same demographic variables.\\
 \\
-Using the Census Bureau's online API for these exercises presents us three main problems.  
+Using the Census Bureau's online API for these exercises presents us with three main problems:
 \begin{enumerate}
-\item The structure of data in the public use microdata sample is different from data from the online API.
-\item Proportions and standard errors are not included.
-\item Certain combination of variables are simply not available from the online API.
+\item the structure of data in the public use microdata sample is different from data from the online API,
+\item proportions and standard errors are not included,
+\item certain combination of variables are simply not available from the online API.
 \end{enumerate}
 
 <<table, echo=FALSE, warning=FALSE, message=FALSE, cache=TRUE, results="asis", fig.cap='Subset of data used in Chance Article'>>=
@@ -368,7 +395,7 @@ By contrast the online API does not provide individual specific data.  When we p
 \\
 In table \ref{fig:example} we specify state level summaries for health insurance coverage status for various age groups by gender (from the census API this is table B27001).  Each variable is in the form of a table and as previously mentioned we refer to this as a $concept$ and each column in table \ref{fig:example} is referred a $label$.  The first label of each concept is an overall total; the total number of people in the specified geographic region that answered questions relating to the requested concept.   Subsequent labels are subsets of this overall total.  We've conveniently renamed column headers in table \ref{fig:example}; the naming convention from data provided by the API is to enumerate each label with the table name: $B27001\_001$, $B27001\_002$ etc.\\
 \\
-The way this data is organized is not tidy $<$include hadley tidy data reference$>$.  Instead it appears that the columns contain additional categorical information: gender, age and insurance.  In table \ref{fig:tidy} we have tidied up the data so that each row is an observation and each column is a variable.  Originally table B27001 contains a number of $total$ columns: overall total, total number of males, total number of females, and within each gender a total number of people within an age group.  In reshaping this data, we felt that these total columns were redundant once the data is in a tidy form. \\
+The way this data is organized is not tidy \cite{hadley:2014}.  Instead it appears that the columns contain additional categorical information: gender, age and insurance.  In table \ref{fig:tidy} we have tidied up the data so that each row is an observation and each column is a variable.  Originally table B27001 contains a number of \emph{total} columns: overall total, total number of males, total number of females, and within each gender a total number of people within an age group.  In reshaping this data, we felt that these total columns were redundant once the data is in a tidy form. \\
 
 <<melted, echo=FALSE, warning=FALSE, message=FALSE, cache=TRUE, results="asis">>=
 library(reshape2)
@@ -393,7 +420,7 @@ digits(tab2) = rep(0,6)
 print(tab2, include.rownames=FALSE)
 @
 
-The Census Bureau has historically provided information in the form of a count.  However, the nominal frequency of variables may not hold much meaning as different geographic entities contain different populations.  For example, in table \ref{tab:freq} we have university enrollment by age and gender for each state from the 2012 5-year ACS dataset.  This dataset is reshaped into a tidy form.  In this dataset we have gender, age and enrollment status (public university, private university or not enrolled).  California had over 700,000 male students at public universities while Colorado only had around 80,000 students in the same category.  These nominal enrollment numbers mean very little without knowing the size of the population.\\
+The Census Bureau has historically provided information in the form of  counts.  However, the nominal frequency of variables may not hold much meaning as different geographic entities contain different populations.  For example, in table \ref{tab:freq} we have university enrollment by age and gender for each state from the 2012 5-year ACS dataset.  This dataset is reshaped into a tidy form.  In this dataset we have gender, age and enrollment status (public university, private university or not enrolled).  California had over 700,000 male students at public universities while Colorado only had around 80,000 students in the same category.  These nominal enrollment numbers mean very little without knowing the size of the population.\\
 <<freq, echo=FALSE, warning=FALSE, message=FALSE, cache=TRUE, results='asis'>>=
 library(reshape2)
 library(acs)
@@ -433,14 +460,14 @@ print(tab1, include.rownames=FALSE)
 @
 These percentages tell us a lot more about the data; when it comes to public university enrollment for college-aged invidividuals both California and Colorado have fewer males enrolled.  Finding these proportions was not difficult but it requires a bit more work to correctly add up the frequencies in our population.\\
 \\
-A more difficult problem is in finding standard errors for confidence intervals.  Recall that the Census Bureau provides a margin of error for each variable at the 90$\%$ confidence level.  Finding standard errors (SE) for the estimates from the margin of error (MOE) is straight forward: $SE = \frac{MOE}{1.645}$ where 1.645 is the critical value from the standard normal distribution that corresponds to a central area of $0.90$.  Finding the standard error for proportions requires further calculations:
+A more difficult problem lies in finding standard errors for confidence intervals.  Recall that the Census Bureau provides a margin of error for each variable at the 90$\%$ confidence level.  Finding standard errors (SE) for the estimates from the margin of error (MOE) is straight forward: $SE = \frac{MOE}{1.645}$ where 1.645 is the critical value from the standard normal distribution that corresponds to a central area of $0.90$.  Finding the standard error for proportions requires further calculations:
 \begin{align*}
 SE(\frac{A}{B}) = \frac{1}{B}\sqrt{SE(A)^2 - (\frac{A}{B})^2 SE(B)^2}
 \end{align*}
-In calculating proportions we must often add different estimates together for different $labels$.  Combining the standard error for a sum of estimates: $SE(A + B) = \sqrt{SE(A)^2 + SE(B)^2}$.\\
+In calculating proportions we must often add different estimates together for different labels.  Combining the standard error for a sum of estimates: $SE(A + B) = \sqrt{SE(A)^2 + SE(B)^2}$.\\
 %https://www.census.gov/acs/www/Downloads/data_documentation/Statistical_Testing/2012StatisticalTesting3and5.pdf
 \\
-Due to how the data is provided by the Census Bureau compared with the subset of the public use microsample that is used in \citet{stangl:2013} there are limited combination of variables that are available.  One of the exercises in \citet{stangl:2013} is to compare health insurance status by race.  This exercise using the public use microsample is straight forward and requires a single line of code using the plyr package in R.  We can summarise percentage of people with health insurance by race as follows:
+Due to how the data is provided by the Census Bureau compared with the subset of the public use microsample that is used in \citet{stangl:2013} there are limited combinations of variables  available.  One of the exercises in \citet{stangl:2013} is to compare health insurance status by race.  This exercise using the public use microsample is straight forward and requires a single line of code using the plyr \cite{plyr} package in R.  We can summarise percentage of people with health insurance by race as follows:
 <<stangl1, warning=FALSE, message=FALSE, cache=TRUE>>=
 library(plyr)
 acsdat = read.csv("datasetSTANGL2013.csv") #Stangl's dataset
@@ -549,7 +576,7 @@ The dataset from the online API for health insurance by age and race does not in
 \section{Other Issues}
 %\subsection{Comparing across years}
 %http://www.census.gov/acs/www/guidance_for_data_users/comparing_data/
-Although the ACS is a yearly survey, in its current form it is difficult to compare variables across years.  The online API has ACS data available for 2010 to 2012 but even for these years it is difficult track changes during these years.  Recall that the 2012 ACS 5-year dataset is data aggregated from 2008 - 2012.  This means that the 2010, 2011 and 2012 ACS 5-year datasets will include overlapping time periods; some of the data used aggregated to form these 5-year estimates will overlap.  \\
+Although the ACS is a yearly survey, in its current form it is difficult to compare variables across years.  The online API has ACS data available for 2010 to 2012 but even for these years it is difficult to track changes across these years.  Recall that the 2012 ACS 5-year dataset is data aggregated from 2008 - 2012.  This means that the 2010, 2011 and 2012 ACS 5-year datasets will include overlapping time periods; some of the data used aggregated to form these 5-year estimates will overlap.  \\
 \\
 It is possible to circumvent this overlapping data problem by combining the ACS 5-year estimate with the ACS 1-year estimate.  The 2011 ACS 5-year and the 2012 ACS 1-year do not contain overlapping data.  However, datasets from different years contain different demographic variables.  For example, questions regarding healthcare were first added in 2008 and datasets prior to 2008 will not contain healthcare variables.  The ACS 1-year estimates have smaller sample sizes and as a result not all geographic regions are available.  The ACS 1-year estimates only have data available for geographic regions with populations of 65,000 or greater.\\
 \\
